c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/incomplete_types/void_array.c
int main(void) {
    void arr[3]; // array of incomplete element type is illegal
    return 0;
}